--- a/index.css
+++ b/index.css
@@ -211,6 +211,11 @@ a:active {
         font-size: 22px;
     }
 
+    #presentation_projet {
+        width: 90%;
+        height: auto;
+    }
+
     .overlay-content {
         width: 30%;
         height: auto;
