--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-body {
+body, html {
     background-image: url('Images/background.jpg'); 
     background-size: cover;
     background-position: center;
@@ -9,6 +9,7 @@ body {
     margin: 0;
     height: 165vh;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 
